--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 
 #Kotlin
 kotlin.code.style=official
+kotlinVersion=1.7.20
 
 #Android
 android.useAndroidX=true
@@ -12,3 +13,12 @@ android.useAndroidX=true
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.enableCInteropCommonization=true
+
+
+#API
+ktorVersion=2.1.2
+logbackVersion=1.4.1
+kmongoVersion=4.7.1
+koinVersion=3.2.2
+koinKtor=3.2.2
+testcontainersVersion=1.15.3
