--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ kotlin.mpp.enableCInteropCommonization=true
 ktorVersion=2.1.2
 logbackVersion=1.4.1
 kmongoVersion=4.7.1
+realmVersion=1.2.0
 koinVersion=3.2.2
 koinKtor=3.2.2
-testcontainersVersion=1.15.3
+testcontainersVersion=1.17.4
