--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,8 @@ kotlinVersion=1.7.20
 
 #Android
 android.useAndroidX=true
+composeVersion=1.0.5
+koinAndroidVersion=3.3.0
 
 #MPP
 kotlin.mpp.enableGranularSourceSetsMetadata=true
