Adding error message on login exceptions, LoginViewModel added

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.grup.android">
 
     <application
-        android:name=".MainApplication"
-        android:allowBackup="false"
+        android:allowBackup="true"
+        android:label="GRUP"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -12,7 +12,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -28,7 +27,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
