--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,9 @@ kotlinVersion=1.7.20
 
 #Android
 android.useAndroidX=true
+composeVersion=1.0.5
+lifecycleVersion=2.5.1
+navigationVersion=2.5.3
 
 #MPP
 kotlin.mpp.enableGranularSourceSetsMetadata=true
@@ -18,8 +21,6 @@ kotlin.mpp.enableCInteropCommonization=true
 #API
 ktorVersion=2.1.2
 logbackVersion=1.4.1
-kmongoVersion=4.7.1
 realmVersion=1.5.0
 koinVersion=3.2.2
 koinKtor=3.2.2
-testcontainersVersion=1.17.4
