--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 
 #Kotlin
 kotlin.code.style=official
-kotlinVersion=1.7.20
+kotlinVersion=1.8.10
 
 #Android
 android.useAndroidX=true
@@ -17,11 +17,12 @@ accompanistVersion=0.28.0
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
 
 
 #API
 ktorVersion=2.1.2
 logbackVersion=1.4.1
-realmVersion=1.5.0
+realmVersion=1.6.1
 koinVersion=3.2.2
 koinKtor=3.2.2
