--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ composeVersion=1.0.5
 lifecycleVersion=2.5.1
 navigationVersion=2.5.3
 accompanistVersion=0.28.0
+coilComposeVersion=2.2.2
 
 #MPP
 kotlin.mpp.enableGranularSourceSetsMetadata=true
@@ -26,3 +27,4 @@ logbackVersion=1.4.1
 realmVersion=1.6.1
 koinVersion=3.2.2
 koinKtor=3.2.2
+awsVersion=0.21.0-beta
