--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -7,3 +7,11 @@ target 'iosApp' do
   pod 'GoogleSignIn'
   pod 'GoogleSignInSwiftSupport'
 end
+
+post_install do |installer|
+ installer.pods_project.targets.each do |target|
+  target.build_configurations.each do |config|
+   config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.1'
+  end
+ end
+end
